<resources>
    <string name="app_name">Paint &amp; Draw</string>
    <string name="this_is_item_sample">Ceci est un exemple d’élément !</string>
    <string name="please_send_us">Please send us some feedback!</string>
    <string name="write_some_feedback">Write some feedback</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="There_is_no_email">Aucun client email installé.</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly</string>
    <string name="continue_permission">Continue</string>
    <string name="allow_storage_access">Allow storage access</string>
    <string name="oh_we_re_sorry">Oh, We’re sorry...</string>
    <string name="much_appreciated">Much appreciated!</string>
    <string name="your_feedback_is_welcome">Your feedback is welcome.</string>
    <string name="your_support_is_our_biggest_motivation">Your support is our biggest motivation!</string>
    <string name="title_intro_1">Draw with Magic</string>
    <string name="content_1">Turn every line into something magical.</string>
    <string name="title_intro_2">Inspiration Doodle</string>
    <string name="content_2">Draw your dreams. Let your ideas glow.</string>
    <string name="title_intro_3">Magical Patterns</string>
    <string name="content_3">Unleash your style with eye-catching designs.</string>
    <string name="title_intro_4">Magic Coloring</string>
    <string name="content_4">Bring your art to life with every shade.</string>
    <string name="language">Language</string>
    <string name="output_path">Output path</string>
    <string name="output_path_title">output path title</string>
    <string name="close">close</string>
    <string name="rate_us">Rate us</string>
    <string name="may_be_later">May be later</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="magic_doodle">Magic Doodle</string>
    <string name="painting">Drawing...</string>
    <string name="free_creation">Free creation</string>
    <string name="inspiration">Inspiration</string>
    <string name="coloring">Coloring</string>
    <string name="preview_off">Lock coloring is off</string>
    <string name="preview_on">Lock coloring is on</string>
    <string name="my_file">My Sketches</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="setting">Setting</string>
    <string name="policy">Policy</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="draw_this_now">Draw This Now!</string>
    <string name="background">Background</string>
    <string name="discard_drawing">Discard Drawing?</string>
    <string name="discard">Discard</string>
    <string name="save_to_my_sketches">Save to My Sketches</string>
    <string name="your_progress_will_be_lost">your progress will be lost</string>
    <string name="start_drawing">Start Drawing</string>
    <string name="please_select_type">Please select type</string>
    <string name="photo_saved_to_device">Photo saved to device</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_delete_it">Do you want to delete it?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="detail">Detail</string>
    <string name="no_data">No data</string>
    <string name="save_to_gallery">Image saved to device</string>
    <string name="coloration">Coloration</string>
    <string name="draw">Draw</string>
    <string name="save_it">Save it?</string>
    <string name="are_you_save_it">Do you want to save it in My Sketches?</string>
    <string name="are_you_want_save_it">Would you like to save it to My Sketches before leaving?</string>

</resources>