<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_home"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magic_doodle"
        android:fontFamily="@font/kaushanscript_regular_400"
        android:textColor="@color/main"
        android:textSize="28sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_setting"
        app:layout_constraintTop_toTopOf="@+id/tvApp"
        app:layout_constraintBottom_toBottomOf="@+id/tvApp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvApp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFreeCreation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_option_main"
                app:layout_constraintTop_toTopOf="parent"
                android:includeFontPadding="false"
                android:layout_marginHorizontal="30dp"
                android:text="@string/free_creation"
                android:textSize="21sp"
                android:textColor="@color/main"
                android:fontFamily="@font/poppins_bold_700"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/img_free_creation"
                android:drawablePadding="30dp"
                android:paddingStart="30dp"
                android:layout_marginTop="8dp"
                android:paddingVertical="14dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_option_main"
                app:layout_constraintTop_toBottomOf="@+id/tvFreeCreation"
                android:includeFontPadding="false"
                android:layout_marginHorizontal="30dp"
                android:text="@string/inspiration"
                android:textSize="21sp"
                android:textColor="@color/main"
                android:fontFamily="@font/poppins_bold_700"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/img_inspiration"
                android:drawablePadding="20dp"
                android:paddingVertical="14dp"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="30dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvColoring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_option_main"
                app:layout_constraintTop_toBottomOf="@+id/tvInspiration"
                android:includeFontPadding="false"
                android:layout_marginHorizontal="30dp"
                android:text="@string/coloring"
                android:textSize="21sp"
                android:textColor="@color/main"
                android:fontFamily="@font/poppins_bold_700"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/img_coloring"
                android:drawablePadding="30dp"
                android:paddingStart="30dp"
                android:layout_marginTop="8dp"
                android:paddingVertical="14dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMyFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_option_main"
                app:layout_constraintTop_toBottomOf="@+id/tvColoring"
                android:includeFontPadding="false"
                android:layout_marginHorizontal="30dp"
                android:text="@string/my_file"
                android:textSize="21sp"
                android:textColor="@color/main"
                android:fontFamily="@font/poppins_bold_700"
                android:gravity="center_vertical"
                android:drawableEnd="@drawable/img_my_file"
                android:drawablePadding="20dp"
                android:paddingVertical="14dp"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="30dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>